@@ -1627,9 +1627,9 @@ AddressCallContext::$supportedActions[] = array(
                 $tag_string = "";
                 if( count($object->tags->tags()) > 0 )
                     $tag_string = "tag: '".$object->tags->toString_inline()."'";
-                PH::print_stdout( $context->padding . "* " . get_class($object) . " '{$object->name()}' (DYNAMIC)    desc: '{$object->description()}' $tag_string filter: '{$object->filter}" );
+                PH::print_stdout( $context->padding . "* " . get_class($object) . " '{$object->name()}' (DYNAMIC)  ({$object->count()} members)  desc: '{$object->description()}' $tag_string filter: '{$object->filter}" );
                 PH::$JSON_TMP['sub']['object'][$object->name()]['type'] = get_class($object)." (DYNAMIC)";
-                PH::$JSON_TMP['sub']['object'][$object->name()]['description'] = $object->description();
+
                 PH::$JSON_TMP['sub']['object'][$object->name()]['tag'] = $tag_string;
                 PH::$JSON_TMP['sub']['object'][$object->name()]['filter'] = $object->filter;
             }
@@ -1637,22 +1637,23 @@ AddressCallContext::$supportedActions[] = array(
             {
                 PH::print_stdout( $context->padding . "* " . get_class($object) . " '{$object->name()}' ({$object->count()} members)   desc: '{$object->description()}'" );
                 PH::$JSON_TMP['sub']['object'][$object->name()]['type'] = get_class($object);
-                PH::$JSON_TMP['sub']['object'][$object->name()]['memberscount'] = $object->count();
-                PH::$JSON_TMP['sub']['object'][$object->name()]['description'] = $object->description();
+            }
 
-                foreach( $object->members() as $member )
+            PH::$JSON_TMP['sub']['object'][$object->name()]['memberscount'] = $object->count();
+            PH::$JSON_TMP['sub']['object'][$object->name()]['description'] = $object->description();
+
+            foreach( $object->members() as $member )
+            {
+                PH::$JSON_TMP['sub']['object'][$object->name()]['members'][$member->name()]['name'] = $member->name();
+                PH::$JSON_TMP['sub']['object'][$object->name()]['members'][$member->name()]['type'] = get_class( $member );
+
+                if( $member->isAddress() )
                 {
-                    PH::$JSON_TMP['sub']['object'][$object->name()]['members'][$member->name()]['name'] = $member->name();
-                    PH::$JSON_TMP['sub']['object'][$object->name()]['members'][$member->name()]['type'] = get_class( $member );
-
-                    if( $member->isAddress() )
-                    {
-                        PH::print_stdout( "          - {$member->name()}  value: '{$member->value()}'" );
-                        PH::$JSON_TMP['sub']['object'][$object->name()]['members'][$member->name()]['value'] = $member->value();
-                    }
-                    else
-                        PH::print_stdout( "          - {$member->name()}" );
+                    PH::print_stdout( "          - {$member->name()}  value: '{$member->value()}'" );
+                    PH::$JSON_TMP['sub']['object'][$object->name()]['members'][$member->name()]['value'] = $member->value();
                 }
+                else
+                    PH::print_stdout( "          - {$member->name()}" );
             }
         }
         else
